--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_APP_EMAILJS_SERVICE_ID="service_baqd68a"
-VITE_APP_EMAILJS_TEMPLATE_ID="template_ndh3s6m"
-VITE_APP_EMAILJS_PUBLIC_KEY="r7XBfupP0GDFMYYsf"
+VITE_APP_EMAILJS_SERVICE_ID=
+VITE_APP_EMAILJS_TEMPLATE_ID=
+VITE_APP_EMAILJS_PUBLIC_KEY=
